5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1649_1055.log
== SUBMITION (2019-04-16 15:56:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.184597
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 7, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:57:09) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.159869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 4, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:33:57) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.152498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:34:32) 
-- CODE:
    from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.214613
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 1
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:34:39) 
-- CODE:
    from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
File "XXXX", line 1
    from math import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:36:18) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.144776
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:36:45) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:50:45) 
-- CODE:
from math import*

v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:50:50) 
-- CODE:
from math import*

v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.140981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 6, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:50:59) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:51:01) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.138147
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:54:26) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:54:30) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.155666
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:55:45) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.128124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:55:51) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:55:58) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:56:26) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.204205
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 8
    if (abs(d-R)<0.1):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:57:41) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:57:43) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- EXECUTION TIME:
0.216542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    g==9.8
NameError: name 'g' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:59:55) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang= radians(float(input("angulo alfa: ")))
d=float(input("distancia porco-passaro: "))
g==9.8
R=(v0**2)*(sin(2*radians(ang)/))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")
-- ERROR:
File "XXXX", line 6
    R=(v0**2)*(sin(2*radians(ang)/))/g
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
